--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I'm a former teacher and life-long student. I'm thrilled to be embarking on this magical journey with Flatiron School!</p>
