--- a/about.html
+++ b/about.html
@@ -4,4 +4,26 @@ title: About
 
 ---
 
-<p>I'm a former teacher and life-long student. I'm thrilled to be embarking on this magical journey with Flatiron School!</p>
+<p>
+    Hi friends! My name is Audrea Cook, also known as the Code Witch. I graduated
+    from Flatiron School's software engineering bootcamp in January of 2020, and I am
+    currently seeking a full-time developer position.
+</p>
+<p>
+    You can learn a lot about my professional life on my
+    <a href="https://www.linkedin.com/in/audreacook/" target="_blank">LinkedIn</a> and
+    <a href="https://github.com/AudTheCodeWitch" target="_blank">GitHub</a> profiles,
+    but here are a few things you may not know about me:
+</p>
+<ul>
+    <li>I live in Colorful Colorado with my gorgeous husband and our two dogs. Ally, our
+        shiba inu, is 99% fur. Juniper Rose, our whippet puppy, is 99% legs. They're an odd
+        pair.</li>
+    <li>I crochet. A lot. My crowning crafty achievement is my king-size MooglyCal afghan,
+        which I completed in 2017. I am currently working on several new projects, including
+        two blankets.</li>
+    <li>When I'm not coding or crocheting, I've probably got my nose stuck in a book. With
+        a degree in English literature, I just can't help it! My goal for the last few years
+        has been to read at least one book a week. If you are a fellow bookworm, join me on
+        <a href="https://www.goodreads.com/user/show/1778734-audrea" target="_blank">GoodReads</a>!</li>
+</ul>
