--- a/about.html
+++ b/about.html
@@ -25,5 +25,5 @@ title: About
     <li>When I'm not coding or crocheting, I've probably got my nose stuck in a book. With
         a degree in English literature, I just can't help it! My goal for the last few years
         has been to read at least one book a week. If you are a fellow bookworm, join me on
-        <a href="https://www.goodreads.com/user/show/1778734-audrea" target="_blank">GoodReads</a>!</li>
+        <a href="https://www.goodreads.com/user/show/1778734-audrea" style="text-decoration: underline" target="_blank">GoodReads</a>!</li>
 </ul>
