--- a/about.html
+++ b/about.html
@@ -23,10 +23,16 @@ title: About
       I live in Colorful Colorado with my gorgeous husband and our two dogs.
       Ally, our shiba inu, is 99% fur. Juniper Rose, our whippet puppy, is 99%
       legs. They're an odd pair.
-        <figure>
-            <img src="img/doggos.jpg" alt="Ally and Juju">
-            <figcaption>Juniper Rose and Ally having a cuddle.</figcaption>
-        </figure>
+      <figure style="text-align: center;">
+        <img
+          src="/img/doggos.jpg"
+          alt="Ally and Juju"
+          style="height: 250px; display: inline-block"
+        />
+        <figcaption style="font-size: smaller">
+          Juniper Rose and Ally having a cuddle.
+        </figcaption>
+      </figure>
     </li>
     <li>
       I crochet. A lot. My crowning crafty achievement is my king-size MooglyCal
