Add MooglyCal link

--- a/about.html
+++ b/about.html
@@ -35,7 +35,13 @@ title: About
       </figure>
     </li>
     <li>
-      I crochet. A lot. My crowning crafty achievement is my king-size MooglyCal
+      I crochet. A lot. My crowning crafty achievement is my king-size
+      <a
+        href="https://www.mooglyblog.com/category/2014-afghan-cal/"
+        style="text-decoration: underline"
+        target="_blank"
+        >MooglyCal</a
+      >
       afghan, which I completed in 2017. I am currently working on several new
       projects, including two blankets.
     </li>
